--- a/SOK.Web/Views/Settings/Users/Index.cshtml
+++ b/SOK.Web/Views/Settings/Users/Index.cshtml
@@ -37,8 +37,13 @@
                 Brak użytkowników w systemie.
             </h2>
             <h4 class="text-center text-lg opacity-70">
-                To zasadnicze nieporozumienie, bo jesteś tu przynajmniej Ty. Pilnie skontaktuj się z administratorem.
+                Kliknij poniżej, aby dodać nowego użytkownika:
             </h4>
+                
+            <a asp-action="CreateUser" class="btn btn-primary mt-4">
+                <i class="bi bi-plus"></i>
+                Nowe konto
+            </a>
         </div>
     }
     else
