--- a/SOK.Web/Views/Account/Login.cshtml
+++ b/SOK.Web/Views/Account/Login.cshtml
@@ -5,6 +5,10 @@
     Layout = "_LayoutPublic";
 }
 
+<div class="absolute top-10 left-1/2 z-[1000] w-[90vw] -translate-x-1/2 transform lg:w-md xl:w-lg" id="notification-container">
+    <partial name="_Notification" />
+</div>
+
 <div class="my-auto flex justify-center">
     <form asp-action="Login" method="post" class="">
         <fieldset class="fieldset bg-base-200 border-base-300 rounded-box w-xs border p-4">
