--- a/SOK.Web/Views/Plans/Index.cshtml
+++ b/SOK.Web/Views/Plans/Index.cshtml
@@ -168,7 +168,11 @@
                             </div>
                         </div>
                         
-                        <div class="mt-4">
+                        <div class="mt-4 flex flex-col md:flex-row gap-3">
+                            <a asp-action="VisitStats" asp-route-id=@Model.ActivePlan.Id class="btn btn-primary btn-soft">
+                                <i class="bi bi-graph-up"></i>
+                                Zobacz statystyki kolędy
+                            </a>
                             <a asp-action="SupportersStats" asp-route-id=@Model.ActivePlan.Id class="btn btn-info btn-soft">
                                 <i class="bi bi-bar-chart"></i>
                                 Zobacz statystyki ministrantów
