Usuń superadmina z ról przy tworzeniu

--- a/SOK.Web/Views/Settings/Users/Edit.cshtml
+++ b/SOK.Web/Views/Settings/Users/Edit.cshtml
@@ -4,6 +4,7 @@
 @{
     ViewData["Title"] = "Edytuj użytkownika";
     var allRoles = ViewData["AllRoles"] as List<Role> ?? new List<Role>();
+    allRoles.Remove(Role.SuperAdmin);
 
     string GetBadgeColorClass(Role role)
     {
