--- a/SOK.Web/Views/Settings/Users/Create.cshtml
+++ b/SOK.Web/Views/Settings/Users/Create.cshtml
@@ -4,6 +4,7 @@
 @{
     ViewData["Title"] = "Utwórz użytkownika";
     var allRoles = ViewData["AllRoles"] as List<Role> ?? new List<Role>();
+    allRoles.Remove(Role.SuperAdmin);
 
     string GetBadgeColorClass(Role role)
     {
