--- a/SOK.Web/Views/Account/Login.cshtml
+++ b/SOK.Web/Views/Account/Login.cshtml
@@ -31,7 +31,7 @@
                 @Html.LabelFor(m => m.RememberMe)
             </label>
 
-            <button type="submit" class="btn mt-2 bg-primary">Zaloguj</button>
+            <button type="submit" class="btn btn-primary mt-2">Zaloguj</button>
         </fieldset>
     </form>
 </div>
